kubernetes/carts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  labels:
    app: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
        part-of: gorilla-ec
    spec:
      containers:
      - name: carts
        image: shuheikawamura243/carts:1.0.0
        ports:
        - containerPort: 3002
