kubernetes/catalogue-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
        part-of: gorilla-ec
    spec:
      containers:
      - name: catalogue
        image: shuheikawamura243/catalogue:1.0.0
        ports:
        - containerPort: 3001
