kubernetes/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        part-of: gorilla-ec
    spec:
      containers:
      - name: front-end
        image: shuheikawamura243/front-end:1.0.0
        ports:
        - containerPort: 80
