kubernetes/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
        part-of: gorilla-ec
    spec:
      containers:
      - name: orders
        image: shuheikawamura243/orders:1.0.0
        ports:
        - containerPort: 3003
