kubernetes/carts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
spec:
  ports:
  - port: 80
    targetPort: 3002
  selector:
    app: carts
