kubernetes/catalogue-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: catalogue
