kubernetes/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: front-end
