kubernetes/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  ports:
  - port: 3003
    targetPort: 3003
  selector:
    app: orders
